final commit without style

--- a/ajax.html
+++ b/ajax.html
@@ -96,9 +96,8 @@
       addUserButton.attr("cardValue", tarzan);
       $("#buttonClass").prepend(addUserButton);
       console.log(animalsBro);
-      $("#animal-input").empty();
+      $("#animal-input").val("");
     });
-
 
 
   </script>
